optimization and visibility fixes

--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 @font-face {
   font-family: Stray;
-  src: url("/stray.otf") format("opentype");
+  font-display: swap;
+  src: url("/stray.woff2") format("woff2");
 }
 
 @tailwind base;
@@ -10,7 +10,7 @@
 
 * { @apply transition-all duration-300 ease-in-out; }
 html { @apply h-full scroll-smooth; }
-body { @apply bg-ctp-crust text-ctp-text h-full font-[Roboto,_sans-serif]; }
+body { @apply bg-ctp-crust text-ctp-text h-full; }
 h1 { @apply text-3xl md:text-4xl font-semibold my-4; }
 h2 { @apply text-2xl md:text-3xl font-bold my-4; }
 h3 { @apply text-xl md:text-2xl font-bold my-4; }
